Finish the JWT logic and note logic
