# example/app/config/app.go
@@ -3,7 +3,6 @@ package config
 import (
 	"fmt"
 	"net/http"
-	"strings"
 	"time"
 
 	"github.com/josephspurrier/octane"
@@ -11,6 +10,7 @@ import (
 	"github.com/josephspurrier/octane/example/app/endpoint"
 	"github.com/josephspurrier/octane/example/app/lib/passhash"
 	"github.com/josephspurrier/octane/example/app/lib/webtoken"
+	"github.com/josephspurrier/octane/example/app/middleware/jwt"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 )
@@ -26,28 +26,6 @@ func Config() *echo.Echo {
 	// Middleware.
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
-	e.Use(middleware.JWTWithConfig(middleware.JWTConfig{
-		SigningKey: []byte(settings.Secret),
-		ContextKey: string(app.KeyUserID),
-		Skipper: func(c echo.Context) bool {
-			p := c.Request().URL.Path
-
-			switch true {
-			case p == "/favicon.ico":
-				return true
-			case p == "/api/v1/healthcheck":
-				return true
-			case p == "/api/v1/register":
-				return true
-			case p == "/api/v1/login":
-				return true
-			case strings.HasPrefix(p, "/swagger/"):
-				return true
-			}
-
-			return false
-		},
-	}))
 
 	// Use Go Playground Validator.
 	e.Binder = octane.NewBinder()
@@ -57,7 +35,18 @@ func Config() *echo.Echo {
 	ac := new(app.Context)
 	ac.DB = Database(e.Logger)
 	ac.Passhash = passhash.New()
-	ac.Webtoken = webtoken.New([]byte(settings.Secret), time.Duration(settings.SessionTimeout)*time.Minute)
+	ac.Webtoken = webtoken.New([]byte(settings.Secret),
+		time.Duration(settings.SessionTimeout)*time.Minute)
+
+	// Set up the webtoken.
+	token := jwt.New([]string{ // JWT whitelist.
+		"GET /favicon.ico",
+		"GET /api/v1/healthcheck",
+		"POST /api/v1/login",
+		"POST /api/v1/register",
+		"GET /swagger/*",
+	}, ac.Webtoken, *ac)
+	e.Use(token.Handler())
 
 	// Set the default error handler so all errors use the standard format.
 	e.HTTPErrorHandler = func(err error, c echo.Context) {
@@ -87,10 +76,10 @@ func Config() *echo.Echo {
 	e.POST("/api/v1/login", ac.HandlerFunc(endpoint.Login))
 	e.POST("/api/v1/register", ac.HandlerFunc(endpoint.Register))
 	e.POST("/api/v1/note", ac.HandlerFunc(endpoint.NoteCreate))
-	// e.GET("/api/v1/note", ac.HandlerFunc(endpoint.NoteIndex))
-	// e.GET("/api/v1/note/:note_id", ac.HandlerFunc(NoteShow))
-	// e.PUT("/api/v1/note/:note_id", NoteUpdate)
-	// e.DELETE("/api/v1/note/:note_id", NoteDestroy)
+	e.GET("/api/v1/note", ac.HandlerFunc(endpoint.NoteIndex))
+	e.GET("/api/v1/note/:note_id", ac.HandlerFunc(endpoint.NoteShow))
+	e.PUT("/api/v1/note/:note_id", ac.HandlerFunc(endpoint.NoteUpdate))
+	e.DELETE("/api/v1/note/:note_id", ac.HandlerFunc(endpoint.NoteDestroy))
 
 	// Static routes.
 	e.Static("/swagger/*", "swaggerui")
